# efficient-agents

./: .gitignore  .gitmodules  Makefile  compose.yaml  compose.yaml.j2  pyproject.toml  requirements.txt  vars.yaml
docker/: Dockerfile.api  Dockerfile.ncu_vllm
docs/: vllm_args_full.txt
k8s/: .gitignore  Makefile
src/: beam_search.py  config.py  utils.py
src/benchmarking/: experiment.py
src/examples/: beam_search.py
src/examples/beam_search/: agent_server.py  agentic_server.py  main.py  models.py  scoring.py  searches.py  single_process_driver.py  test_separated_components.py  thought.py  work_dispatcher.py
src/experiments/: analyze_nsys_metrics.py  beam_search_online_latencies.py  cached_embeddings.py  kv_sizes.py  langchain_vs_vllm.py  nsight_compute_test.py  vllm_online_benchmark.py
src/rag/: helper_functions.py  simple_rag.py
src/sal/: __init__.py  aggregate.py  data.py  math.py  qwen_math_parser.py  score.py
